<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashBuddy</string>
    <string name="next_button_text">Next</string>
    <string name="done_button_text">Done</string>
    <string name="question_title_text">Question</string>
    <string name="answer_title_text">Answer</string>
    <string name="show_answer_text">Show Answer</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_banner">FlashBuddy</string>
    <string name="username">username</string>
    <string name="newusername">Enter a user name</string>
    <string name="password">password</string>
    <string name="createuser_text">Create an Account!</string>
    <string name="createdeck_text">Create A FlashBuddy Deck</string>
    <string name="deckname">Insert Deck Name</string>
    <string name="decksubject">Insert Deck Subject</string>
    <string name="create_deck">Create Deck</string>
    <string name="share_deck">Share Deck</string>
    <string name="numcards">Number of Cards</string>
    <string name="create_password_1">Enter a password</string>
    <string name="create_password_2">Enter it again</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="view_flash_decks">View Flash Decks</string>
    <string name="create_flash_decks">Create Flash Decks</string>
    <string name="share_flash_decks">Share Flash Decks</string>
    <string name="help_login">Login Help</string>
    <string name="title_activity_flash_buddy_displayed_message">FlashBuddy Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_flash_buddy_user">FlashBuddy</string>
    <string name="title_activity_flash_buddy_create_user">FlashBuddyCreateUserActivity</string>
    <string name="title_activity_flash_buddy_study_decks">FlashBuddy Study Decks</string>
    <string name="main_start_studying">Start Studying!</string>
    <string name="main_view_decks">Decks</string>
    <string name="main_help">Help</string>
    <string name="main_logout">Logout</string>
    <string name="main_currentusername">"Currently logged in as: "</string>
    <string name="main_trueUsername"></string>
    <string name="edit_deck_button">Edit Deck</string>
    <string name="create_deck_button">Create Deck</string>
    <string name="delete_deck_button">Delete Deck</string>
    <string name="title_activity_flash_buddy_modify_decks">FlashBuddyModifyDecksActivity</string>
    <string name="loginscreenhelp">Swipe up to see help!</string>
    <string name="loginhelp">To Login\n\n\t1) Enter your username\n\t2) Enter your password\n\nNo Account?\n\n\t1) Select Create New Account\n\nNavigation\n\n\t Swipe up to see help information.\n\t Swipe down to go back.\n</string>
 	<string name="whiteboard">Whiteboard Drawable</string>
 	
    <color name="lightblue">#55606e</color>
    <color name="red">#dd514c</color>
    <color name="darkblue">#343a41</color>
    <color name="green">#4FA044</color>
    <color name="gray">#D7D7D7</color>
    <color name="bluebutton">#7b93af</color>
    <color name="flashbuddymain">#2EC178</color>
    <color name="buttoncolor">#259A60</color>
    <color name="buttongradient">#479C71</color>
    <color name="hint">#C2C2A3</color>
    <color name="Black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="ExpandChildBackground">#FFAFABAB</color>
    <color name="ExpandGroupBackground">#FF7C7C7C</color>
    <color name="highlighted_entry">#7A1839</color>
    <color name="transparent">#80000000</color>

    <string name="title_activity_xmlparse">XMLParseActivity</string>
    <string name="title_activity_flash_buddy_create_deck">FlashBuddyCreateDeckActivity</string>
    <string name="study_deck_button">Study Deck</string>
    <string name="title_activity_flash_buddy_exec_study_deck">FlashBuddyExecStudyDeck</string>
    <string name="title_activity_flash_buddy_card_input">FlashBuddyCardInputActivity</string>
    <string name="title_activity_flash_buddy_edit_deck">FlashBuddyEditDeckActivity</string>
    <string name="timer">Timer</string>
    <color name="timerColor">#9D4384</color>
    <string name="timerPrompt">Session Study Time</string>
    <string name="minTimer">Minutes</string>
    <string name="secTimer">Seconds</string>
    <string name="title_activity_flash_buddy_timer">FlashBuddyTimerActivity</string>
    <string name="TimerText">Study Timer</string>
    <string name="StudyTimer">0</string>

</resources>
