<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlashBuddyUserActivity" >

    <Button
        android:id="@+id/ViewDecks"
        android:layout_width="167dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/StartStudying"
        android:layout_centerVertical="true"
        android:onClick="onClickShowDecks"
        android:text="@string/main_view_decks" />

    <Button
        android:id="@+id/Help"
        android:layout_width="167dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/StartStudying"
        android:layout_centerVertical="true"
        android:text="@string/main_help" />

    <Button
        android:id="@+id/StartStudying"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_above="@+id/ViewDecks"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/main_start_studying" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:onClick="onClickLogout"
        android:text="@string/main_logout" />

    <TextView
        android:id="@+id/current_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Logout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/main_currentusername" />

    <TextView
        android:id="@+id/usernameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Logout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/main_trueUsername" />

</RelativeLayout>
