<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlashBuddyExecStudyDeck" >

    <EditText
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardDesignator"
        android:layout_below="@+id/QuestionBanner"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AnswerButton"
        android:layout_below="@+id/AnswerButton"
        android:background="@color/red"
        android:onClick="onClickDoneStudying"
        android:text="@string/done_button_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/AnswerButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_above="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/green"
        android:onClick="onClickShowAnswer"
        android:text="@string/show_answer_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/QuestionBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardDesignator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/question_title_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/AnswerBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/answer_title_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionText"
        android:layout_below="@+id/AnswerBanner"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/cardDesignator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/AnswerButton"
        android:background="@drawable/rightarrow"
        android:onClick="onClickNextCard"
        android:text="@string/next_button_text"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AnswerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textSize="28sp" />

</RelativeLayout>
