<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlashBuddyEditDeckActivity" >

    <EditText
        android:inputType="none"
        android:id="@+id/cardDesignator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardDesignator"
        android:layout_below="@+id/cardDesignator"
        android:layout_marginTop="22dp"
        android:text="@string/question_title_text" />

    <EditText
        android:id="@+id/questionEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionView"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine" 
        android:ems="10" />

    <TextView
        android:id="@+id/answerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionEntry"
        android:layout_below="@+id/questionEntry"
        android:layout_marginTop="20dp"
        android:text="@string/answer_title_text" />

    <EditText
        android:id="@+id/answerEntry"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerView"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerEntry"
        android:layout_centerVertical="true"
        android:text="Timer(in seconds)" />

    <EditText
        android:id="@+id/timerEntry"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerView"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerEntry"
        android:layout_below="@+id/timerEntry"
        android:layout_marginTop="46dp"
        android:onClick="onClickNextCard"
        android:text="@string/next_button_text" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignRight="@+id/timerEntry"
        android:onClick="onClickWriteCard"
        android:text="Save Changes" />

</RelativeLayout>
